# onebot-forward-rs

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
migration/src/: lib.rs  m20250406_000001_create_table.rs  m20250426_000002_add_group_chat_id_column.rs
src/: client.rs  command.rs  config.rs  main.rs  model.rs  server.rs  utils.rs  wss.rs
src/model/: app.rs  cache.rs  config.rs  log.rs  mod.rs  onebot.rs
src/model/entity/: rule.rs
src/wss/: impl.rs  sdk.rs
src/wss/impl/: multi.rs  single.rs
