[package]
name = "onebot-forward-rs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/reine-ishyanami/onebot-forword-rs"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tokio-macros = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
tokio-tungstenite = { version = "0.26.2", features = ["rustls"] }
anyhow = "1.0.97"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
