[package]
name = "onebot-forward-rs"
version = "0.5.1"
edition = "2024"
repository = "https://github.com/reine-ishyanami/onebot-forword-rs"
description = "Onebot protocol forward server written in Rust"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
clap = { version = "4.5.35", features = ["derive"] }
tokio-macros = "2.5.0"
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
chrono = "0.4.38"
fern = "0.7.1"
log = "0.4.22"
tokio-tungstenite = { version = "0.26.2", features = ["rustls", "handshake"] }
anyhow = "1.0.97"
toml = "0.8.20"
lettre = { version = "0.11.15", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "builder",
    "ring",
    "rustls-native-certs",
] }

futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "migration" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
